# audio-gtk

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
resources/: resources.xml
resources/ui/: window_about.ui  window_main.ui  window_stats.ui
src/: main.rs
src/file_object/: imp.rs  mod.rs
